--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -601,16 +601,18 @@
 <p>Learn more on the employer's withholding and reporting obligations: <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/first-nations.html">Payments to First Nations workers</a>.</p>
     
         <h2 id="hdng15">Excise duties and taxes </h2>
-<p>Throughout the following text, for purposes of the tax exemption under section 87 of the Indian Act, the CRA uses the term “Indian” because it has a legal meaning in the Indian Act.</p>
-<p>Excise duties and taxes apply to certain products. The manufacturer or distributor, not the consumer, pays these taxes. The CRA administers the legislation which regulates the products to which these taxes apply. The CRA also licenses the manufacturers of these products. Although an amount equal to the tax may be included in the price, the courts have confirmed that Indian individuals are not exempt from such an indirect tax.</p>
-<p>Federal excise duty applies to alcohol and tobacco products. The Excise Act, 2001 is the legislation that imposes excise duty on spirits, wine and tobacco products while the Excise Act governs beer. For information about licensing and paying excise duty, contact the office in your region listed in <a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-act-2001-technical-information/excise-duty-memoranda.html">Excise Duty Memorandum 1.1.2, Regional Excise Duty Offices</a>.</p>
-<p>The Excise Tax Act imposes federal excise tax on motive fuel products, automotive air conditioners and certain fuel-inefficient vehicles and insurance premiums. For more information, including where to send requests for excise tax licences, see <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/etsl74.html">ETSL74 Notice to all Excise Tax Licensees and Tax Professionals – Excise Tax Licensing and Related Enquiries</a>.</p>
-<p>If an Indian, an Indian band, or a band-empowered entity wants to manufacture or produce goods that are subject to excise duty or tax, it must first apply for the proper licence or registration. Licensees or registrants must file monthly returns and pay the duty or tax that applies. The tax exemption set out in the Indian Act does not exempt an on-reserve manufacturer from paying excise duty or tax on tobacco, fuel and other products.</p>
+<p>Excise duties and taxes apply to certain products. The manufacturer or distributor, not the consumer, pays these taxes. The CRA administers the legislation which regulates the products to which these taxes apply. The CRA also licenses the manufacturers of these products. Although an amount equal to the tax may be included in the price, the courts have confirmed that <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a> are not exempt from such an indirect tax.</p>
+<p>Federal excise duty applies to alcohol and tobacco products. The Excise Act, 2001 is the legislation that imposes excise duty on spirits, wine and tobacco products while the Excise Act governs beer. </p>
+<p>Learn more about licensing and paying excise duty and how to contact the office in your region: <a href="https://www.canada.ca/en/revenue-agency/services/tax/technical-information/excise-act-2001-technical-information/excise-duty-memoranda.html">Excise Duty Memorandum 1.1.2, Regional Excise Duty Offices</a></p>
+<p>The Excise Tax Act imposes federal excise tax on motive fuel products, automotive air conditioners and certain fuel-inefficient vehicles and insurance premiums. </p>
+<p>Learn more on where to send requests for excise tax licences: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/etsl74.html">ETSL74 Notice to all Excise Tax Licensees and Tax Professionals – Excise Tax Licensing and Related Enquiries</a></p>
+
+<p>If a First Nations individual, a First Nations band, or a band-empowered entity wants to manufacture or produce goods that are subject to excise duty or tax, it must first apply for the proper licence or registration. Licensees or registrants must file monthly returns and pay the duty or tax that applies. The tax exemption set out in the Indian Act does not exempt an on-reserve manufacturer from paying excise duty or tax on tobacco, fuel and other products.</p>
 
  
 <details><summary>Example</summary>
     
-        <p>Individual K is an Indian individual who buys cigarettes and gasoline from a gas bar situated on a reserve. Individual K's Indian status does not exempt the individual from paying the excise duty and tax amounts that are included in the retail price of the cigarettes and gas. Therefore, individual K must pay the retail price which includes excise duty and tax amounts. However, individual K will not pay the GST/HST on the cigarettes and gas if individual K shows their Certificate of Indian Status card to the retailer.</p>
+        <p>Individual K is a First Nations individual who buys cigarettes and gasoline from a gas bar situated on a reserve. Individual K's being registered under the Indian Act does not exempt the individual from paying the excise duty and tax amounts that are included in the retail price of the cigarettes and gas. Therefore, individual K must pay the retail price which includes excise duty and tax amounts. However, individual K will not pay the GST/HST on the cigarettes and gas if individual K shows their Certificate of Indian Status card to the retailer.</p>
 </details>
   
 
@@ -618,11 +620,11 @@
  
         <h2 id="hdng16">Goods and services tax/Harmonized sales tax (GST/HST)</h2>
 <p>The GST applies to most supplies of property and services made in Canada. The HST applies to most supplies of property and services in the provinces of Nova Scotia, New Brunswick, Newfoundland and Labrador, Prince Edward Island, and Ontario.</p>
-<p>Purchases of property and services by Indians may be relieved from GST/HST.</p>
+<p>Purchases of property and services by <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a> may be relieved from GST/HST.</p>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples.html">GST/HST and Indigenous peoples</a></p>
    <h3>Other taxes specific to First Nations and Indigenous governments</h3>
-<p>Oher taxes specific to First Nations and Indigenous governments may also apply. All individuals, including Indians, have to pay these taxes if they apply.</p>
+<p>Oher taxes specific to First Nations and Indigenous governments may also apply. All individuals, including First Nations individual, have to pay these taxes if they apply.</p>
 <p>Learn more about the following taxes that may apply on lands governed by a First Nation or an Indigenous government:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples/first-nations-goods-services-tax.html">First Nations goods and services Tax (FNGST)</a></li>
