--- a/subway/uht/contact.html
+++ b/subway/uht/contact.html
@@ -768,7 +768,7 @@ html:lang(fr) .cnjnctn-or:before {
         <p>This option is available to <strong>Canadian citizens and permanent residents only</strong>.</p>
         <details class="mrgn-tp-md">
           <summary>Individuals </summary>
-          <p>Use CRA My Account for Individuals to:</p>
+          <p>Use your CRA My Account for Individuals to:</p>
           <ul>
             <li>file your Underused Housing Tax return</li>
             <li>update your personal information,  including your address and your marital status</li>
