--- a/sred/scientific-research-experimental-development-tax-incentive-program/what-work.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/what-work.html
@@ -113,8 +113,8 @@
  
 <details>             
 <summary>What is an advancement</summary>
-	<p>An advancement is the generation or discovery of <strong>knowledge</strong> that moves the understanding of science or technology forward.</p>
-	<p>New knowledge is needed when it is unknown that a given result can be achieved because of a gap in the <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/glossary.html#tbslvl">scientific or technological knowledge base</a> that existed at the start of the project. </p>
+	<p>An advancement is the generation or discovery of <strong>new knowledge</strong> that moves the understanding of science or technology forward.</p>
+	<p>New knowledge is needed when it is unknown or uncertain that a given result can be achieved due to an insufficiency in the <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/glossary.html#tbslvl">scientific or technological knowledge base</a> that existed at the start of the project. This is referred to as the <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/glossary.html#ncrtnty">scientific or technological uncertainty.</a> </p>
 	<p>Overcoming the uncertainty and gaining new scientific or technological knowledge is the reason <strong>why</strong> the SR&amp;ED work is done. </p>
 <p>You <strong>do not have to achieve your goal</strong> in order to gain new knowledge. For example, if your work allowed you to understand that the idea you tested is not a solution for your situation, this can be considered new knowledge.</p>
 <p>What is important is that the knowledge gained advances the understanding of science or technology, not how the work advanced your business or business practices.</p>
