--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -1013,8 +1013,10 @@ html:lang(fr) .cnjnctn-or:before {
         <p>You must keep records to support the information you provide in your return. If you claim an exemption but do not have adequate records to support it, we may <strong>disallow</strong> it.</p>
 		 <p>Generally, you must keep your records for 6 years from the end of the year they relate to. Your records must be kept in Canada, in English or French, unless otherwise authorized by the Minister.</p>
 <p>We cannot provide a defined list of records that you can use to support an exemption <strong>because</strong> each person’s situation is unique. </p>
-		
-	<p>Examples of records to support the information you provide in your return could include, but are not limited to the following:</p>	  
+
+	  <details>
+		  <summary>Examples of records</summary>
+		  <p>Examples of records to support the information you provide in your return could include, but are not limited to the following:</p>	  
 	<ul>
 		<li>Municipal property tax assessment notice</li>
 		<li>Purchase and sales agreements</li>
@@ -1032,6 +1034,9 @@ html:lang(fr) .cnjnctn-or:before {
 		<li>Written appraisal report</li>
 		<li>General correspondence whether written, or in any other form</li>
 	</ul>
+	  </details>
+		
+	
 
 
 
