--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -117,7 +117,7 @@
     
         <h2 id="hdng1">Overview</h2>
 
-<p>As a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a>, you are subject to the same tax rules as other Canadian residents unless your income is eligible for the tax exemption under section 87 of the Indian Act. That exemption applies to the income of a First Nations individual that is earned <a href="#ajax-def4" aria-controls="ajax-def3" class="overlay-lnk" role="button">on a reserve <span class="far fa-question-circle"></span></a> or that is considered to be earned on a reserve, as well as to goods bought on, or delivered to, a reserve.</p>
+<p>As a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a>, you are subject to the same tax rules as other Canadian residents unless your income is eligible for the tax exemption under section 87 of the Indian Act. That exemption applies to the income of a First Nations individual that is earned <a href="#def2" aria-controls="def2" class="overlay-lnk" role="button">on a reserve <span class="far fa-question-circle"></span></a> or that is considered to be earned on a reserve, as well as to goods bought on, or delivered to, a reserve.</p>
  <details><summary>Daniels decision</summary>
 <p>The 2016 Supreme Court of Canada decision in Daniels v. Canada, 2016 SCC 12, declared that Métis and non-status First Nations individual are “Indians” for the purpose of federal Parliament’s law-making jurisdiction under subsection 91(24) of the Constitution Act, 1867. However, this decision did not change who is an “Indian” in the Indian Act.</p>
 <p>The tax exemption available under the Indian Act only applies to an individual who is an “Indian” as defined in the Indian Act. Therefore, the Daniels decision <strong>does not</strong> change the group of individuals currently eligible for the tax exemption. We will continue to apply and administer the Indian Act tax exemption in the same way as prior to the Daniels decision.</p>
@@ -631,40 +631,44 @@
 <li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses/charge-collect-indigenous-peoples/first-nations-tax.html">First Nations tax (FNT)</a></li>
 </ul>
 
-<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#terms-used-first-nations"></div>	   
+     <h2 id="meaning">Meaning of terms used</h2> 
+ 
+<div class="row">
+<div class="col-xs-12">
+<dl class="dl-horizontal">
+
+ <dt> 
+  <strong>First Nations</strong> 
+ </dt> 
+ <dd> 
+ <div id="ajax-fnterm">  <p>For purposes of the tax exemption under section 87 of the Indian Act, the Canada Revenue Agency uses the term “First Nations”, which means a person who is an Indian as defined in the Indian Act. This term is defined in the Indian Act as a person who is registered as an Indian or is entitled to be registered as an Indian. Determining whether a person is entitled to be registered as an Indian is a question of fact.</p> 
+<p>Learn more about registration under the Indian Act from ISC: <a href="https://www.sac-isc.gc.ca/eng/1100100032463/1572459644986">Benefits, rights, programs and services</a> </p></div> 
+ </dd> 
+ <dt> 
+  <strong>Reserve</strong> 
+ </dt> 
+ <dd> 
+ <div id="ajax-def2">  <p>This has the meaning assigned by the Indian Act, including any settlements deemed to be reserves for purposes of the Indian Settlements Remission Order, and any other areas given similar treatment under federal legislation (for example, Category 1-A lands under the Cree-Naskapi (of Quebec) Act). </p>
+<p>Learn more on about the treaty and agreement negotiations from CIRNAC: <a href="https://www.rcaanc-cirnac.gc.ca/eng/1100100028568/1529354090684">Treaty and agreement negotiations</a></p> </div>
+ </dd> 
+
+</dl>
+   </div>
+</div>  	   
 
 
-<section id="fnterm" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term First Nations individual </h2>
+<section id="fnterm" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term “First Nations” </h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#ajax-fnterm"></div>
+	<div data-ajax-replace="#ajax-fnterm"></div>
 	</div></section>
 
-<section id="ajax-def1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Employer is resident on a reserve</h2>
+
+<section id="def2" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term “reserve”</h2>
 	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def1"></div>
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>	
+	<div data-ajax-replace="#ajax-def2"></div>
 	</div></section>
 
-<section id="ajax-def2" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">First Nations employee or worker</h2>
-	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def2"></div>
-	</div></section>
 
-<section id="ajax-def3" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">First Nations employee lives on the reserve</h2>
-	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def3"></div>
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>
-	</div></section>
-
-<section id="ajax-def4" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">On a reserve</h2>
-	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def4"></div>
-	</div></section>
-
-<section id="ajax-def5" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Social, cultural, educational or economic development</h2>
-	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#def5"></div>
-	</div></section>
 
             <div id="def-preFooter"></div>
             <!-- Write closure template -->
