--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -96,6 +96,9 @@
 
 
 <p>There must be a valid contract in place to determine if the worker is considered an employee or is self-employed.</p>
+
+<p><strong>If you are not sure of which jurisdiction sets the rules for your industry</strong>, go to: <a href="https://www.canada.ca/en/services/jobs/workplace/federally-regulated-industries.html"> List of federally regulated industries and workplaces</a></p>
+
 <details> <summary>Examples of questions the CRA may ask you to determine the validity of the contract</summary>
 <h3 id="h_1_1">Validity of a contract</h3>
 <ul>
@@ -124,7 +127,6 @@
 </div>
 <h2>Answer a few questions for guidance on how to determine if a contract is valid</h2>
 <p>Contracts can be formed either orally or in writing. An oral contract is as valid and enforceable as a written contract.</p>
-<p><small>If you are not sure of which jurisdiction sets the rules for your industry, go to: <a href="https://www.canada.ca/en/services/jobs/workplace/federally-regulated-industries.html"> List of federally regulated industries and workplaces</a></small></p>
 
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
   <div id="interactive">
