--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -192,8 +192,11 @@
 <hr>
 <h4>Indicator: Contract is not valid</h4>    
  <p class="mrgn-tp-md">There must be an offer and an acceptance of the terms and conditions of the agreement from the parties to be considered a valid contract.  </p>
+<div id="ajax-contract-not-gen">
+<p class="mrgn-tp-md">Because this factor is missing, a contract is not considered formed. A contract cannot exist without the presence of 2 or more parties. </p>
+
 <p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
- 
+   </div>
             </div>
 
 
@@ -208,8 +211,10 @@
 <li>The parents or legal guardians did not provide written consent for the minor child to work</li>
 <li>One of the parties have a mental disability that prevents them from understanding the nature of the contract</li>
 </ul>
-<p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-<p class="mrgn-tp-md">Continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>     
+
+<div data-ajax-replace="#ajax-contract-not-gen"></div>
+
+   
 </div>
 
 <div id="ajax-q3-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
@@ -218,8 +223,8 @@
 <hr>
 <h4>Indicator: Contract is not valid</h4>
 <p class="mrgn-tp-md">The object of the contract must be legitimate to be considered a valid contract.  </p>
-<p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-<p class="mrgn-tp-md">Continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>
+
+<div data-ajax-replace="#ajax-contract-not-gen"></div>
 </div>
 
 <div id="ajax-q4-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
@@ -228,8 +233,8 @@
 <hr>
 <h4>Indicator: Contract is not valid</h4>
 <p class="mrgn-tp-md">The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms) to be considered a valid contract.  </p>
-<p class="mrgn-tp-md">The CRA requires that a valid contract is in place to determine if the worker is considered an employee or is self-employed. However, you may still want to determine the worker classification even if there is no valid contract in place.</p>
-<p class="mrgn-tp-md">Continue to: <a href="factors-psb.html">Determine if the worker is an incorporated employee</a></p>
+
+<div data-ajax-replace="#ajax-contract-not-gen"></div>
      
 </div>
 
