--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -968,7 +968,7 @@ html:lang(fr) .cnjnctn-or:before {
             </ul>
             <p class="mrgn-tp-md">If you have an appraisal report from an appraiser that does not have a designation from one of these associations and need further clarification, please <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a>.</p>
           </details>
-          <p class="mrgn-tp-md">Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091883" target="_blank">UHTN2, Calculating the tax payable using the FMV</a>.</p>
+          <p class="mrgn-tp-md">Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091883" target="_blank">UHTN2, Calculating the tax payable using the FMV</a></p>
         </details>
       </li>
       <li>
