--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -124,6 +124,8 @@
                <li><a href="#h_4">What if the employee has different jobs</a></li>         
               
                <li><a href="#h_7">What to do if you have employees whose province of employment is Quebec</a></li>
+		 <li><a href="#h_7a">What to do if you have First Nations employees</a></li>
+		  <li><a href="#h_7b">What to do if you have employees outside Canada</a></li>   
                <li><a href="#h_8">What to do if you have a business outside Canada</a></li>
                <li><a href="#h_9">What to do if you are self-employed</a></li>
                <li><a href="#h_10">What is the CPP enhancement</a></li>
@@ -234,6 +236,12 @@
             <p>If you transfer an employee from Quebec to another province or territory, you can take into account the QPP contributions you deducted from that employee throughout the year when calculating the maximum CPP contributions to deduct. In addition to deducting CPP/QPP contributions, you will also have to prepare two T4 slips. </p>
            <p>It is important that you calculate and report the proper deductions and insurable/pensionable earnings on both T4 slips.</p>
            </details> 
+
+ <h2 id="h_7a">What to do if you have First Nations employees</h2>
+
+ <h2 id="h_7b">What to do if you have employees outside Canada</h2>
+
+
  <h2 id="h_8">What to do if you have a business outside Canada</h2>
 <p>If you do not have a place of business in Canada, you have the option to file for CPP coverage for your employees in Canada (resident or non-resident) by filling out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt13.html">Form CPT13, Application for an Employer Resident Outside Canada to Cover Employment in Canada Under the Canada Pension Plan</a>.</p>
 
@@ -248,7 +256,10 @@
 <ul>
 <li><a href="https://www.canada.ca/en/revenue-agency/campaigns/cpp-enhancement-self-employed.html">Are you self-employed? Here's what the Canada Pension Plan enhancement means for you</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings.html">Canada Pension Plan (CPP) and Employment Insurance (EI) Rulings</a></li>
-</ul>     
+</ul>  
+<h3>First Nations worker who are self-employed</h3>
+<p>If you are a self-employed <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations worker <span class="far fa-question-circle"></span></a>, you have the option to file for CPP coverage on your tax-exempt self-employment income by filing <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">Form CPT20, Election to Pay Canada Pension Plan Contributions</a> when filing your personal income tax return.</p>
+   
 <h2 id="h_10">What is the CPP enhancement</h2>
 <p>Before January 1, 2019, employees were making a contribution of 4.95% on their pensionable earnings up to their annual maximum pensionable earnings (first ceiling), with employers making an equal contribution. These are the <strong>base contributions </strong>to the CPP. </p>
 <p>From 2019 to 2023, the contribution rate for employees is increased gradually from 4.95% to 5.95%. These are the base contributions (4.95%) and the <strong>first additional contribution</strong> to the CPP (1%).</p>
@@ -303,6 +314,11 @@
 </div>
 </div>
           
+
+<section id="fnterm" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Meaning of the term First Nations employee or worker </h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/payment/first-nations-pop.html#ajax-fnterm"></div>
+	</div></section>
 
   <section id="cpprate" class="wb-overlay modal-content overlay-def wb-popup-mid">
                <header class="modal-header">
