--- a/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/grouping.html
@@ -146,7 +146,7 @@
   <p>Only the activities directly related to resolving the uncertainty, that is, discovering how the virus reacts, would be considered part of the SR&amp;ED project.</p>
 </details>
 <h3>Lifecycle of an SR&amp;ED project</h3>		 
-<p>An SR&amp;ED project starts when you identify the need for a scientific or technological advancement that overcomes an uncertainty. If you find that you have several uncertainties, you may actually have several  SR&amp;ED projects. </p>
+<p>An SR&amp;ED project starts when you identify the need for a scientific or technological advancement that overcomes a <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/glossary.html#ncrtnty">scientific or technological uncertainty</a>. If you find that you have several uncertainties, you may actually have several  SR&amp;ED projects. </p>
 
 <p>An SR&amp;ED project ends when new scientific or technological knowledge is gained, whether you were  successful in reaching your goal or not. Your work may still be eligible even if the results you sought were not achieved.</p>
 <p>After you have grouped your work into SR&amp;ED projects, you can then determine the related expenditures that you may claim for the year.</p>
