--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -238,9 +238,23 @@
            </details> 
 
  <h2 id="h_7a">What to do if you have First Nations employees</h2>
+<p>The employment income of a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations employees <span class="far fa-question-circle"></span></a> which is exempt from income tax is not subject to CPP contributions.</p>
+<p>You have the option to file for CPP coverage for your First Nations employees by filing out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">Form CPT124</a>.</p>
+
+<p>If you choose not to apply for coverage, a First Nations employee can elect to pay CPP on tax-exempt earnings by filling out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt20.html">Form CPT20, Election to Pay Canada Pension Plan Contributions</a> when filing their personal income tax return.</p>
+ 
+ 
+<p>Learn more about the conditions: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt124.html">Form CPT124, Application for Coverage of Employment of an Indian in Canada Under the Canada Pension Plan Whose Income is Exempt Under the Income Tax Act</a></p>
+
 
  <h2 id="h_7b">What to do if you have employees outside Canada</h2>
+<p>If you have employees working outside of Canada, you have the option to file for CPP coverage for your employees by filing out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt8.html">Form CPT8</a> if the employment meets <strong>all</strong> conditions.</p>
 
+<p>Learn more about the conditions: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt8.html">Form CPT8, Application and Undertaking to Cover Employment Outside Canada under the Canada Pension Plan</a></p>
+
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/canada-pension-plan-cpp/employment-outside-canada/employment-a-country-where-a-social-security-agreement-been-signed-canada-1.html">Employment in a country where a social security agreement has not been signed with Canada</a></p>
+
+  
 
  <h2 id="h_8">What to do if you have a business outside Canada</h2>
 <p>If you do not have a place of business in Canada, you have the option to file for CPP coverage for your employees in Canada (resident or non-resident) by filling out <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/cpt13.html">Form CPT13, Application for an Employer Resident Outside Canada to Cover Employment in Canada Under the Canada Pension Plan</a>.</p>
