--- a/payroll/calculate/payment/first-nations-pop1.html
+++ b/payroll/calculate/payment/first-nations-pop1.html
@@ -126,7 +126,7 @@
  <details><summary>Benoit legal decision</summary>
 <p>On June 11, 2003, the Federal Court of Appeal ruled that Treaty&nbsp;8 does not provide a general tax exemption.</p>
 <p>Mr. Benoit and the Treaty 8 plaintiffs subsequently filed an application for leave to appeal the decision to the Supreme Court of Canada. On April&nbsp;29,&nbsp;2004, the Supreme Court of Canada dismissed the application for leave to appeal. The Court of Appeal's decision is now valid and binding.</p>
-<p>While it is now clear that Treaty 8 First Nations individual are not entitled to a general tax exemption, if the property of a Treaty&nbsp;8 First Nations individual is situated on a reserve, it continues to be eligible for the tax exemption under section&nbsp;87 of the Indian Act.</p>
+<p>While it is now clear that Treaty 8 First Nations individuals are not entitled to a general tax exemption, if the property of a Treaty&nbsp;8 First Nations individual is situated on a reserve, it continues to be eligible for the tax exemption under section&nbsp;87 of the Indian Act.</p>
 
 <p>Learn more: <a href="http://decisions.fca-caf.gc.ca/en/2003/2003fca236/2003fca236.html">Federal Court of Appeal Decisions - Benoit cas, file number: A-47-02</a></p>
 
@@ -154,7 +154,7 @@
 <details><summary>Bill C-3</summary>
 <p>If you are entitled to be registered under the Indian Act under Bill&nbsp;C-3 (also known as the Gender Equity in Indian Registration Act, SC 2010, c.18), you may qualify for the section 87 tax exemption for property situated on a reserve starting on January&nbsp;31,&nbsp;2011. This is the date that Bill&nbsp;C-3 came into effect. Only income you earn, or purchases you make on a reserve, on or after January&nbsp;31,&nbsp;2011, may be exempt from tax.</p>
 <p>Proof of registration with Indigenous Services Canada (ISC) is required by the CRA to claim the tax exemption.</p>
-<p>Learn more about Bill&nbsp;C-3 including how to register as a First Nations individual with ISC: <a href="https://www.canada.ca/en/indigenous-services-canada.html">Indigenous Services Canada</a></p>
+<p>Learn more about Bill C-3 including how to register as an Indian with ISC: <a href="https://www.canada.ca/en/indigenous-services-canada.html">Indigenous Services Canada</a></p>
  </details>
 
 <details><summary>Bill S-3</summary>
@@ -170,7 +170,7 @@
 
 <p>Proof of registration with Indigenous Services Canada (ISC) is required by the CRA to claim the tax exemption.</p>
 
-<p>Learn more about Bill&nbsp;S-3 including how to register as a First Nations individual with ISC: please visit <a href="/en/indigenous-services-canada.html">Indigenous Services Canada</a></p>
+<p>Learn more about Bill C-3 including how to register as an Indian with ISC: <a href="/en/indigenous-services-canada.html">Indigenous Services Canada</a></p>
  </details>
 
 <details><summary>Qalipu Mi'kmaq First Nation</summary>
@@ -260,7 +260,7 @@
 <p>A <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual's <span class="far fa-question-circle"></span></a> Employment Insurance benefits, Canada Pension Plan benefits, Quebec Pension Plan benefits, registered pension plan benefits, retiring allowances, and wage-loss replacement plan benefits you receive are treated in the same way as the employment income that gave rise to the particular income. In other words, if your employment income is exempt from income tax under section 87 of the Indian Act, your employment-related income will also be exempt. If part of your employment income is exempt, any employment-related income arising from that exempt income will also be exempt from income tax.</p>
 
  <section class="alert alert-info">
-<p>Each of the following type of employment-related income information applies to <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual  <span class="far fa-question-circle"></span></a></p>
+<p>Each of the following types of employment-related income information applies to a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a></p>
 </section> 
 
 <div id="emp-related"> 
@@ -400,7 +400,7 @@
 
        <h3 id="hdng7">Fishing</h3>
 
-<p>If you carry on a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a> who has a commercial fishing business, your income from that business is generally treated the same as any other business income. Determining whether your business income is exempt from tax is based on the factors that connect income to a reserve.</p>
+<p>If you are a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual <span class="far fa-question-circle"></span></a> who carries on a commercial fishing business, your income from that business is generally treated the same as any other business income. Determining whether your business income is exempt from tax is based on the factors that connect income to a reserve.</p>
  <div id="connect-fishing-income1"> 
 <p>In determining whether your commercial fishing business income is connected to a reserve, factors that may connect your business income to a reserve are:</p>
  <ul class="fa-ul">
@@ -427,7 +427,7 @@
 <p>The allocation of income between off-reserve fishing activities and on-reserve fish-processing activities is determined on a case-by-case basis and should be reasonable in the circumstances. Since your main revenue-generating activities are catching and selling the fish, the exemption, if any, would usually apply only to that portion of your fishing income that specifically relates to the value-added processing activities that are conducted on a reserve. Your business expenses are generally allocated in the same proportion as your revenues, unless another allocation is more reasonable in the circumstances.</p>
 </div>
 <section class="alert alert-info">
-<p>Each of the individuals in the following examples are a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual  <span class="far fa-question-circle"></span></a>. </p>
+<p>Each of the individuals in the following examples is a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual  <span class="far fa-question-circle"></span></a> </p>
 </section> 
 
 <details><summary>Examples where exempt or not exempt</summary>
@@ -506,7 +506,7 @@
     
         <h2 id="hdng10">Other income</h2>
 
-<p>Each of the following type of other income information applies to <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual  <span class="far fa-question-circle"></span></a></p>
+<p>Each of the following types of other income information applies to a <a href="#fnterm" aria-controls="fnterm" class="overlay-lnk" role="button">First Nations individual  <span class="far fa-question-circle"></span></a></p>
  
    <details><summary>Registered retirement savings plan (RRSP) income</summary>
        <p>If you earn exempt income only and you have contributed to an RRSP, you cannot deduct your contributions on your tax return. By the same token, any withdrawals of your <strong>original</strong> RRSP contributions will not be taxable. However, since your exempt income did not create any RRSP contribution room, you will have to pay a penalty under Part X.1 of the Income Tax Act for your non-deductible contributions to your RRSP. Any investment earnings you withdraw from the RRSP will be taxed in the same way as interest and investment income.</p>
